perf(constraint-streams): fused equal indexer (#2346)